(PC-28188)[PRO] fix: fix alignment in responsive for new nav review

--- a/pro/src/components/NewNavReview/NewNavReview.module.scss
+++ b/pro/src/components/NewNavReview/NewNavReview.module.scss
@@ -8,13 +8,14 @@
     display: flex;
     gap: rem.torem(8px);
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     padding: rem.torem(16px) rem.torem(24px);
     border: solid rem.torem(1px) colors.$grey-medium;
     margin-top: size.$top-menu-height;
 
     @media (min-width: size.$tablet) {
       margin-left: size.$side-nav-width;
+      align-items: center;
     }
   }
 
